--- a/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
+++ b/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
@@ -27,6 +27,7 @@
     padding: 2px;
     margin: 0 1%;
     min-width: 80px;
+    min-height: 40px;
     text-align: center;
     display: flex;
     align-items: center;
