--- a/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
+++ b/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
@@ -11,6 +11,7 @@
     background-color: black;
     font-family: 'Bebas Neue', cursive;
     font-size: clamp(10px, 2vw, 30px);
+    min-width: 80px;
     padding: 2px;
     margin: 2% 0;
     text-align: center;
