--- a/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
+++ b/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
@@ -24,9 +24,10 @@
     text-decoration: none;
     background-color: black;
     font-family: 'Bebas Neue', cursive;
+    font-weight: 600;
     font-size: clamp(15px, 1.6vw, 30px);
     margin: 0 3px;
-    padding: 3px;
+    padding: 3px 7px;
     text-align: center;
     display: flex;
     align-items: center;
@@ -36,4 +37,9 @@
 
 .navButton:hover {
     box-shadow: 0 0 10px darkgrey;
+}
+
+.navButtonClassText {
+    font-size: clamp(10px, 1.4vw, 25px);
+    align-self: flex-end;
 }
