--- a/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
+++ b/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
@@ -10,9 +10,9 @@
     color: white;
     text-decoration: none;
     background-color: black;
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'BN-normal', cursive;
+    font-weight: 500;
     font-size: clamp(10px, 2vw, 30px);
-    font-weight: 600;
     min-width: 60px;
     padding: 2px;
     margin: 2% 0;
