--- a/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
+++ b/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
@@ -14,6 +14,7 @@
     font-weight: 500;
     font-size: clamp(10px, 2vw, 25px);
     min-width: 60px;
+    max-width: 120px;
     padding: 2px;
     margin: 2% 0;
     text-align: center;
