--- a/src/Components/componentStyles.css
+++ b/src/Components/componentStyles.css
@@ -13,7 +13,6 @@
     margin-top: 1%;
     margin-left: 1%;
     display: flex;
- 
 }
 
 .BoxProOdkazy {
@@ -22,7 +21,6 @@
     flex-wrap: wrap;
     display: flex;
     align-items: flex-start;
-  
 }
 
 .obrazekKarty {
@@ -53,6 +51,18 @@
     width: 300px;
     text-decoration: none;
     margin: 0;
+    color: black;
+    border: 3px solid black;
+    padding: 6px;
+}
+
+.sectionButtonCards {
+    background-color: white;
+    font-weight: 800;
+    font-size: clamp(15px, 1.8vw, 30px);
+    width: 300px;
+    text-decoration: none;
+    margin-left: 5%;
     color: black;
     border: 3px solid black;
     padding: 6px;
