--- a/src/Components/componentStyles.css
+++ b/src/Components/componentStyles.css
@@ -63,6 +63,7 @@
     width: 300px;
     text-decoration: none;
     margin-left: 5%;
+    margin-bottom: -3%;
     color: black;
     border: 3px solid black;
     padding: 6px;
