--- a/src/Components/componentStyles.css
+++ b/src/Components/componentStyles.css
@@ -62,8 +62,8 @@
     font-size: clamp(15px, 1.8vw, 30px);
     width: 300px;
     text-decoration: none;
-    margin-left: 5%;
-    margin-bottom: -3%;
+    margin-left: 2%;
+    margin-top: 0;
     color: black;
     border: 3px solid black;
     padding: 6px;
