fixed margin for nav buttons

--- a/src/Components/componentStyles.css
+++ b/src/Components/componentStyles.css
@@ -63,6 +63,9 @@
     font-weight: 800;
     font-size: clamp(15px, 1.8vw, 30px);
     width: 300px;
+    margin-left: 2%;
+    margin-top: -2%;
+    margin-bottom: 1%;
     text-decoration: none;
     color: black;
     border: 3px solid black;
