--- a/src/Components/componentStyles.css
+++ b/src/Components/componentStyles.css
@@ -21,7 +21,7 @@
     flex-wrap: wrap;
     display: flex;
     align-items: flex-start;
-}
+    }
 
 .obrazekKarty {
     margin: 20px;
@@ -53,6 +53,7 @@
     text-decoration: none;
     margin-left: 3%;
     margin-top: 1%;
+    margin-bottom: 5%;
     color: black;
     border: 3px solid black;
     padding: 6px;
@@ -81,7 +82,8 @@
 .sectionButtonLink {
     text-decoration: none;
     font-weight: 800;
-    margin: -2px 10px;
+    margin: 0px 10px;
+    margin-top: 0%;
     font-family: 'BN-normal', cursive;
   
 }
