--- a/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
+++ b/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
@@ -1,124 +1,124 @@
 .NavigaceVertikalniKontejner {
-    width: 10%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
+  width: 10%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
 }
 
 .verButton {
-    color: white;
-    text-decoration: none;
-    background-color: black;
-    font-family: "BN-normal", cursive;
-    font-weight: 500;
-    font-size: clamp(13px, 2vw, 25px);
-    min-width: 60px;
-    padding: 2px;
-    margin: 2% 0;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  color: white;
+  text-decoration: none;
+  background-color: black;
+  font-family: "BN-normal", cursive;
+  font-weight: 500;
+  font-size: clamp(13px, 2vw, 25px);
+  min-width: 60px;
+  padding: 2px;
+  margin: 2% 0;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .verButton:hover {
-    box-shadow: 0 0 20px darkgrey;
+  box-shadow: 0 0 20px darkgrey;
 }
 
 .example-container {
-    width: 320px;
-    padding: 20px;
+  width: 320px;
+  padding: 20px;
 }
 
 .refresh {
-    padding: 10px;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    border-radius: 1px;
-    width: 20px;
-    height: 20px;
-    top: 10px;
-    right: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 1px;
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .content-placeholder {
-    padding: 2px;
-    transform-origin: top center;
+  padding: 2px;
+  transform-origin: top center;
 }
 
 header {
-    background: black;
-    border-radius: 1px;
-    color: white;
-    cursor: pointer;
-    height: 40px;
-    margin-bottom: 5px;
+  background: black;
+  border-radius: 1px;
+  color: white;
+  cursor: pointer;
+  height: 40px;
+  margin-bottom: 5px;
 }
 
 .word {
-    height: 18px;
-    border-radius: 10px;
-    display: inline-block;
-    margin-bottom: 8px;
-    margin-right: 8px;
-    background: black;
-    border-radius: 1px;
-    display: inline-block;
+  height: 18px;
+  border-radius: 10px;
+  display: inline-block;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  background: black;
+  border-radius: 1px;
+  display: inline-block;
 }
 
 .paragraph {
-    margin-top: -20px;
-    margin-bottom: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(92, 92, 92);
-    font-weight: 300;
-    font-size: clamp(13px, 2vw, 25px);
+  margin-top: -20px;
+  margin-bottom: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  background-color: rgb(92, 92, 92);
+  font-weight: 500;
+  font-size: clamp(13px, 1.6vw, 25px);
 }
 
 .paragraph h5 {
-    font-family: "BN-normal", cursive;
+  font-family: "Bebas neue", cursive;
 }
 
 .paragraph:hover {
-    color: #000000;
-    opacity: 0.7;
+  color: #000000;
+  opacity: 0.7;
 }
 
 section {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .buttonHeader {
-    text-align: center;
-    padding: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  padding: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 600px) {
-    .content-placeholder {
-        padding-left: 20px;
-    }
-    .header .word {
-        height: 30px;
-    }
-    .word {
-        height: 14px;
-        margin-bottom: 5px;
-        margin-right: 5px;
-    }
-    .paragraph {
-        margin-bottom: 20px;
-    }
+  .content-placeholder {
+    padding-left: 20px;
+  }
+  .header .word {
+    height: 30px;
+  }
+  .word {
+    height: 14px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+  }
+  .paragraph {
+    margin-bottom: 20px;
+  }
 }
