--- a/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
+++ b/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
@@ -1,88 +1,101 @@
 .NavigaceVertikalniKontejner {
-    width: 10%;
-    min-width: 150px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
+  width: 10%;
+  min-width: 150px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
 }
 
 .example-container {
-    width: 320px;
-    padding: 20px;
+  width: 320px;
+  padding: 20px;
 }
 
 .refresh {
-    padding: 10px;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    border-radius: 1px;
-    width: 20px;
-    height: 20px;
-    top: 10px;
-    right: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 1px;
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .content-placeholder {
-    padding: 2px;
-    transform-origin: top center;
+  padding: 2px;
+  transform-origin: top center;
 }
 
 header {
-    background: black;
-    border-radius: 1px;
-    color: white;
-    cursor: pointer;
-    height: 40px;
-    margin-bottom: 5px;
+  background: black;
+  border-radius: 1px;
+  color: white;
+  cursor: pointer;
+  height: 40px;
+  margin-bottom: 5px;
 }
 
 .word {
-    height: 18px;
-    border-radius: 10px;
-    display: inline-block;
-    margin-bottom: 8px;
-    margin-right: 8px;
-    background: black;
-    border-radius: 1px;
-    display: inline-block;
+  height: 18px;
+  border-radius: 10px;
+  display: inline-block;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  background: black;
+  border-radius: 1px;
+  display: inline-block;
 }
 
 .paragraph {
-    margin-top: -20px;
-    margin-bottom: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(92, 92, 92);
-    font-weight: 500;
-    font-size: clamp(13px, 1.8vw, 25px);
+  margin-top: -20px;
+  margin-bottom: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  background-color: rgb(92, 92, 92);
+  font-weight: 500;
+  font-size: clamp(13px, 1.8vw, 23px);
+  padding: 0px 5px;
+  white-space: wrap;
+  height: auto;
 }
 
 .paragraph h5 {
-    font-family: "Bebas neue", cursive;
+  text-align: center;
+  font-family: "BN-normal", cursive;
+  font-weight: 500;
+  font-size: clamp(13px, 1.6vw, 23px);
+  padding: 0px 0px;
 }
 
 .paragraph:hover {
-    color: #000000;
-    opacity: 0.7;
+  color: #000000;
+  opacity: 0.7;
 }
 
 section {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .buttonHeader {
-    text-align: center;
-    padding: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  font-family: "BN-normal", cursive;
+  font-weight: 500;
+  font-size: clamp(13px, 1.6vw, 23px);
+  margin: 3px 3px;
+  white-space: wrap;
+  padding: 3px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
 }
