--- a/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
+++ b/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
@@ -1,67 +1,67 @@
 .horizontalniNavigaceKontejner {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    overflow: scroll;
-    margin-left: 10%;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+  margin-left: 10%;
 }
 
 .horizontalniNavigaceKontejner::-webkit-scrollbar {
-    background-color: transparent;
-    height: 5px;
+  background-color: transparent;
+  height: 5px;
 }
 
 .horizontalniNavigaceKontejner::-webkit-scrollbar-track {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .horizontalniNavigaceKontejner::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
+  background-color: darkgrey;
 }
 
 .navButton {
-    color: white;
-    text-decoration: none;
-    background-color: black;
-    font-family: "BN-normal", cursive;
-    font-weight: 500;
-    font-size: clamp(13px, 1.6vw, 25px);
-    margin: 0 3px;
-    padding: 3px 7px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
+  color: white;
+  text-decoration: none;
+  background-color: black;
+  font-family: "BN-normal", cursive;
+  font-weight: 500;
+  font-size: clamp(13px, 1.6vw, 25px);
+  margin: 0 3px;
+  padding: 3px 7px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
 }
 
 .navButton:hover {
-    box-shadow: 0 0 10px darkgrey;
+  box-shadow: 0 0 10px darkgrey;
 }
 
 .navButtonClassText {
-    font-size: clamp(10px, 1.4vw, 21px);
-    align-self: flex-end;
-    margin-bottom: 1%;
+  font-size: clamp(10px, 1.4vw, 21px);
+  align-self: flex-end;
+  margin-bottom: 1%;
 }
 
 @media only screen and (max-width: 600px) {
-    .horizontalniNavigaceKontejner {
-        flex-direction: column;
-        width: 200%;
-        overflow: visible;
-    }
-    .navButton {
-        margin-bottom: 5px;
-        height: 37px;
-        font-family: "Bebas neue", cursive;
-        font-weight: 800;
-        color: white;
-        font-size: clamp(20px, 1.7vw, 25px);
-        white-space: nowrap;
-    }
-    .navButtonClassText {
-        align-self: center;
-        font-size: clamp(20px, 1.7vw, 25px);
-    }
+  .horizontalniNavigaceKontejner {
+    flex-direction: column;
+    width: 200%;
+    overflow: visible;
+  }
+  .navButton {
+    margin-top: 3px;
+    width: 100%;
+    height: 23px;
+    font-family: "BN-normal", cursive;
+    color: white;
+    font-size: clamp(13px, 1.6vw, 23px);
+    white-space: nowrap;
+  }
+  .navButtonClassText {
+    align-self: center;
+    font-size: clamp(13px, 1.6vw, 23px);
+  }
 }
