--- a/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
+++ b/src/Components/NavigaceVertikalni/NavigaceVertikalni.css
@@ -1,98 +1,105 @@
 .NavigaceVertikalniKontejner {
-  width: 10%;
-  min-width: 150px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  z-index: 2;
+    width: 10%;
+    min-width: 150px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
 }
 
 .example-container {
-  width: 320px;
-  padding: 20px;
+    width: 320px;
+    padding: 20px;
 }
 
 .refresh {
-  padding: 10px;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.4);
-  border-radius: 1px;
-  width: 20px;
-  height: 20px;
-  top: 10px;
-  right: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+    padding: 10px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 1px;
+    width: 20px;
+    height: 20px;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .content-placeholder {
-  padding-top: 2px;
-  width: 96%;
-  margin-left: 2%;
-  transform-origin: top center;
+    padding-top: 2px;
+    width: 100%;
+    height: min-content;
 }
 
 header {
-  background: black;
-  border-radius: 1px;
-  color: white;
-  cursor: pointer;
-  height: 40px;
-  margin-bottom: 5px;
+    background: black;
+    border-radius: 1px;
+    color: white;
+    cursor: pointer;
+    height: 40px;
+    margin-bottom: 5px;
 }
 
 .word {
-  height: 40px;
-  border-radius: 10px;
-  display: inline-block;
-  margin-bottom: 8px;
-  margin-right: 8px;
-  background: black;
-  border-radius: 1px;
+    height: 40px;
+    border-radius: 10px;
+    display: inline-block;
+    margin-bottom: 8px;
+    margin-right: 8px;
+    background: black;
+    border-radius: 1px;
 }
 
 .paragraph {
-  text-decoration: none;
-  padding: 2px;
-  color: rgb(255, 255, 255);
-  background-color: rgb(92, 92, 92);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 26px;
-  font-weight: 500;
-  font-size: clamp(13px, 1.8vw, 16px);
-  white-space: wrap;
+    background-color: rgb(92, 92, 92);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    white-space: wrap;
 }
 
 .paragraph h5 {
-  font-family: "BN-normal", cursive;
-  font-weight: 500;
-  font-size: clamp(13px, 1.6vw, 21px);
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: "BN-normal", cursive;
+    font-weight: 500;
+    margin: 5px;
+    font-size: clamp(10px, 1.6vw, 21px);
 }
 
 .paragraph:hover {
-  color: #000000;
-  opacity: 0.7;
+    color: #000000;
+    opacity: 0.7;
 }
 
 section {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .buttonHeader {
-  font-family: "BN-normal", cursive;
-  font-weight: 500;
-  font-size: clamp(13px, 1.6vw, 23px);
-  font-display: flex;
-  margin: 3px;
-  padding: 5px;
-  white-space: wrap;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  height: fit-content;
+    font-family: "BN-normal", cursive;
+    font-weight: 500;
+    font-size: clamp(13px, 1.6vw, 23px);
+    font-display: flex;
+    background-color: black !important;
+    color: white !important;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 10px !important;
+}
+
+.buttonHeader div {
+    text-align: center;
+    width: 100%;
+}
+
+.AccordionDetails {
+    display: flex;
+    flex-direction: column;
+    padding: 0px !important;
 }
