--- a/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
+++ b/src/Components/NavigaceHorizontalni/NavigaceHorizontalni.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     overflow: scroll;
     margin-left: 10%;
+    z-index: 2;
 }
 
 .horizontalniNavigaceKontejner::-webkit-scrollbar {
@@ -53,7 +54,7 @@
     }
     .navButton {
         margin-top: 3px;
-        width: 100%;
+        width: 80%;
         height: 23px;
         font-family: "BN-normal", cursive;
         color: white;
@@ -64,43 +65,54 @@
         align-self: center;
         font-size: clamp(13px, 1.6vw, 23px);
     }
-    .sideKickWrapperRight {
+    .sideKickWrapper {
         position: absolute;
         width: 45%;
         height: auto;
         top: 14%;
         right: 5%;
-        pointer-events: none;
-        z-index: 1;
+        z-index: 10;
     }
-    .sideKickOverLayRight {
+    .sideKickOverLay {
         position: absolute;
         width: 100%;
         height: 100%;
         top: 0;
         left: 0;
-        pointer-events: all;
         z-index: 0;
     }
     .sideKickBodyRight {
         position: relative;
         z-index: 1;
-        pointer-events: all;
         background-color: #fff;
         padding: 40px 60px 30px 30px;
         height: 100%;
-        position: relative;
         box-sizing: border-box;
     }
-    .sideKickContent {
+    .sideKickContentRight {
         width: 100%;
         height: 100%;
+        margin-top: 40px;
+        padding: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: white;
+    }
+    .sideKickContentLeft {
+        width: 100%;
+        height: 100%;
+        margin-top: 40px;
+        position: absolute;
+        left: -50vw;
+        top: 0;
+        padding: 5px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        background-color: white;
     }
     .MenuHandlerRight {
-        border: none;
         background: transparent;
         border: 1px solid black;
         border-radius: 0;
@@ -110,7 +122,21 @@
         font-size: clamp(13px, 1.6vw, 23px);
         width: 100px;
         top: 10px;
-        left: 0px;
+        left: 27vw;
+        outline: none;
+        z-index: 5;
+    }
+    .MenuHandlerLeft {
+        background: transparent;
+        border: 1px solid black;
+        border-radius: 0;
+        position: absolute;
+        font-family: "BN-normal", cursive;
+        font-weight: 500;
+        font-size: clamp(13px, 1.6vw, 23px);
+        width: 100px;
+        top: 10px;
+        left: -50vw;
         outline: none;
         z-index: 5;
     }
