--- a/src/Components/componentStyles.css
+++ b/src/Components/componentStyles.css
@@ -94,7 +94,10 @@
 
 @media screen and (max-width: 600px) {
     .BoxProKarty {
-        margin: 5%;
+        margin-top: 10%;
+        margin-left: 10%;
+        padding: 0;
+        align-self: center;
     }
     .BoxProOdkazy {
         margin-left: 10%;
